03/04/2005  version 0.4 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Added better error checking when loading plugins.
    * Updated the plugin manager to look nicer. Needs a bit more work though.

03/03/2005  version 0.4 pre14   Ian Lewis <IanLewis@member.fsf.org>

    * Added some changes for dependency tracking of plugins.

03/02/2005  version 0.3 pre13   Ian Lewis <IanLewis@member.fsf.org>

    * Added logging functionality.

03/01/2005  version 0.3 pre12   Ian Lewis <IanLewis@member.fsf.org>

    * Small additions to XMLDocument to prepare for DTD support.
      Nothing to speak of.

02/16/2005  version 0.3 pre11   Ian Lewis <IanLewis@member.fsf.org>

    * jsXe now loads plugins from both ~/.jsxe/jars and the install
      directory.
    * Added the soft tabs property to the document options.

01/18/2005  version 0.3 pre10   Ian Lewis <IanLewis@member.fsf.org>

    * Added some new functionality for action plugins to add menu items
      to the tools menu.
    * Added a method to XMLDocument that allows you to get a copy of the
      underlying Document object.

01/08/2005  version 0.3 pre9    Ian Lewis <IanLewis@member.fsf.org>

    * Finished the plugin manager dialog.

01/06/2005  version 0.3 pre8    Ian Lewis <IanLewis@member.fsf.org>

    * Added the beginnings of a plugin manager dialog.

01/05/2005  version 0.3 pre7    Ian Lewis <IanLewis@member.fsf.org>

    * Tweaked the plugin interface to eliminate some redundant methods.

12/10/2004  version 0.3 pre6    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug that tried to create a new instance of a main class
      even if the jar wasn't a plugin
    * Updated logic to created the options panels for plugins
    * Updated the XMLDocumentListener again

12/08/2004  version 0.3 pre5    Ian Lewis <IanLewis@member.fsf.org>

    * Updated the ant build document.
    * jsXe now loads a plugin's properties
    * Added support for ActionPlugins
