@@ -32,12 +32,12 @@
     <property name="javac.source" value="1.3"/>
 		<property name="javadoc.link" value="http://java.sun.com/j2se/1.3/docs/api/"/>
     <property name="main.class" value="net.sourceforge.jsxe.jsXe"/>
-		<property name="major.version" value="0"/>
-		<property name="minor.version" value="3"/>
+		<property name="major.version" value="00"/>
+		<property name="minor.version" value="03"/>
 		<property name="beta.version" value="15"/>
-    <property name="build.version" value="0"/>
-		<property name="app.version" value="${major.version}.${minor.version} pre${beta.version} build ${build.version}"/>
-		<property name="app_version" value="${major.version}_${minor.version}pre${build.version}build${build.version}"/>
+    <property name="bugfix.version" value="01"/>
+		<property name="app.version" value="${major.version}.${minor.version} pre${beta.version}"/>
+		<property name="app_version" value="${major.version}_${minor.version}pre${beta.version}"/>
 		<property name="distbin.dir" value="${build.dir}/${app.name}-${app_version}-bin"/>
 		<property name="distsrc.dir" value="${build.dir}/${app.name}-${app_version}-src"/>
 		<path id="classpath">
@@ -120,7 +120,7 @@
 			<entry key="major.version" value="${major.version}"/>
 			<entry key="minor.version" value="${minor.version}"/>
 			<entry key="beta.version" value="${beta.version}"/>
-      <entry key="build.version" value="${build.version}"/>
+      <entry key="build.version" value="${bugfix.version}"/>
 		</propertyfile>
     
     <!-- create jar manifest -->
